# Embodied-dynamic-cognition-io

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
arduino/embodied_io_controller/: embodied_io_controller.ino
configs/: default.yaml
docs/: experiment_design.md  hardware_plan.md  reproducibility.md  research_position.md  system_design.md
logs/: closed_loop_log.csv
results/: summary_metrics.csv
scripts/: replay_logs.py  run_closed_loop.py
src/: __init__.py  closed_loop.py  controller.py  environment.py  logger.py  sensors.py  serial_io.py  state_estimator.py  visualizer.py
tests/: test_closed_loop.py
