[project]
name = "embodied-dynamic-cognition-io"
version = "0.1.0"
description = "Closed-loop dynamic cognitive input-output system for acting on an external space and updating internal state from its response."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
